# scms-fetch-robot

./: .gitignore  README.md
arm_movement/: CMakeLists.txt  README.md  package.xml
arm_movement/launch/: demo.launch
arm_movement/scripts/: disco.py
arm_movement/src/: main.cpp
drink_menu/: CMakeLists.txt  README.md  package.xml
drink_menu/msg/: drink.msg
drink_menu/src/: main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui
grasping/: CMakeLists.txt  README.md  main.cpp  package.xml
grasping/src/: grasp.cpp  grasp.h  main.cpp  main_WIP.cpp  main_old.cpp  original_example.cpp  service.cpp
grasping/srv/: move.srv
gui/menu/: CMakeLists.txt  main.cpp  menugui.cpp  menugui.h  menugui.ui
integration/: CMakeLists.txt  README.md  package.xml
integration/src/: integration.cpp  integration.h  main.cpp
menu/: CMakeLists.txt  drinks.xml
menu/libs/: CMakeLists.txt
menu/libs/pugixml/: CMakeLists.txt
menu/src/: drinks.cpp
scms_test/: CMakeLists.txt  package.xml
scms_test/launch/: demo.launch  gazebo.launch
simulation/: CMakeLists.txt  README.md  package.xml
simulation/launch/: demo.launch  gazebo.launch  rviz.launch  rviz_old.launch  track.launch
simulation/worlds/: bar.sdf  bar_bottles.sdf  bar_updated.sdf
simulation/worlds/models/campari/: campari.dae  model.config  model.sdf
simulation/worlds/models/gin/: gin.dae  model.config  model.sdf
simulation/worlds/models/liquor/: model.config  model.sdf
simulation/worlds/models/liquor/meshes/: model.dae
simulation/worlds/models/vermouth/: model.config  model.sdf  vermouth.dae
simulation/worlds/models/vodka/: model.config  model.sdf  vodka.dae
simulation/worlds/models/vodka/meshes/: Bottle.dae
video/: README.md
vision/: CMakeLists.txt  README.md  package.xml
vision/launch/: track.launch
vision/src/: main.cpp  output  service.cpp  vision.cpp  vision_c.cpp  vision_c.h
