<?xml version="1.0"?>
<package>
    <!-- %Tag(NAME)% -->
    <name>drink_menu</name>
    <!-- %EndTag(NAME)% -->
    <!-- %Tag(VERSION)% -->
    <version>0.1.0</version>
    <!-- %EndTag(VERSION)% -->
    <!-- %Tag(DESC)% -->
    <description>Opens drink menu</description>
    <!-- %EndTag(DESC)% -->

    <!-- %Tag(MAINTAINER)% -->
    <maintainer email="connor.boughton@uts.edu.au">Connor Boughton</maintainer>
    <!-- %EndTag(MAINTAINER)% -->
    <!-- %Tag(LICENSE)% -->
    <license>BSD</license>
    <!-- %EndTag(LICENSE)% -->
    <!-- %Tag(AUTHORS)% -->
    <author email="connor.boughton@uts.edu.au">Connor Boughton</author>
    <!-- %EndTag(AUTHORS)% -->

    <!-- %Tag(DEPS)% -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <!-- %EndTag(DEPS)% -->
</package>